--- a/xjWX/devices.html
+++ b/xjWX/devices.html
@@ -90,6 +90,32 @@
         	width:0.4rem;
         	height:0.32rem;
         }
+        .main{
+            width: 5.4rem;
+            height:5.4rem;
+            background:url("img/blue_img.png");
+            background-size: 100%;
+            margin-top:1.11rem;
+            margin-left:0.75rem;
+            font-size:0.28rem;
+            color:#fff;
+            text-align: center;
+            line-height: 5.4rem
+        }
+        .charts{
+            margin-top:0.71rem;
+        }
+        .placeholder{
+            width: 1.62rem;
+            height:1.62rem;
+            background: #fff;
+            border-radius: 50%;
+            text-align: center;
+           -webkit-box-shadow: 0 0.02rem 0.25rem 0 rgba(152, 204, 233, 0.53);
+            -moz-box-shadow: 0 0.02rem 0.25rem 0 rgba(152, 204, 233, 0.53);
+            -o-box-shadow: 0 0.02rem 0.25rem 0 rgba(152, 204, 233, 0.53);
+            box-shadow: 0 0.02rem 0.25rem 0 rgba(152, 204, 233, 0.53); 
+        }
     </style>
 </head>
 <body>
@@ -101,12 +127,16 @@
                     <span class="set" id="showIOSActionSheet"><img src="img/set.png"></span>
                 </div>
                 <div class="main">
-
+                    一切正常哦~
                 </div>
                 <div class="charts">
                     <div class="weui-flex">
-                        <div class="weui-flex__item"><div class="placeholder">weui</div></div>
-                        <div class="weui-flex__item"><div class="placeholder">weui</div></div>
+                        <div class="weui-flex__item">
+                            <div class="placeholder"></div>
+                        </div>
+                        <div class="weui-flex__item">
+                            <div class="placeholder"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="warning_all">
